More bibliography. Gost.

--- a/atuworks.bib
+++ b/atuworks.bib
@@ -1,19 +1,32 @@
-﻿@string{ asau = "Адаптивні системи автоматичного управління. Міжвідом. науково - техн. зб." }
-@string{ st   = "Системні технології. Регіональний міжвузівський збірник наукових праць" }
-@string{ apir = "Материалы международной научно-технической конференции ``Автоматизация: проблемы, идеи, решения''" }
-@string{ ISDMCI = "Материалы международной конференции ``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта» (ISDMCI).– Херсон: ХНТУ''" }
+﻿@string{ apir = "Материалы международной научно-технической конференции ``Автоматизация: проблемы, идеи, решения''" }
 @string{ atu  = "Гуда, А. И." }
 @string{ mai  = "Михалёв, А. И." }
 @string{ atum = "Гуда, А. И. and Михалёв, А. И." }
 @string{ atume= "Guda, A. I. and Mikhalyov, A. I." }
 
+@xdata{asau,
+  journal = {Адаптивні системи автоматичного управління. Міжвідом. науково - техн. зб.},
+  location = {Днепр},
+}
 
+@xdata{st,
+  journal = {Системні технології. Регіональний міжвузівський збірник наукових праць},
+  location = {Днепр},
+}
+
+@xdata{ISDMCI,
+  journal = {Материалы международной конференции ``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI)},
+  location = {Херсон: ХНТУ},
+  publisher = {ХНТУ},
+}
 
 
 @Article{atu_asau10,
   title = {Информационные оценки сложности задачи параметрической идентификации динамических систем},
-  journal = asau,
   author = atum,
+  xdata = {asau},
+  language     = {russian},
+  langid       = {russian},
   year = {2007},
   number = {10(30)},
   pages = {96--103}
@@ -21,17 +34,21 @@
 
 @Article{atu_asau11,
   title = {Синтез критерия идентификации нелинейных динамических систем на физических принципах},
-  journal = asau,
-  author = {Гуда, А. И. and Михалёв, А. И. and Новикова, Е.Ю},
+  xdata = {asau},
+  author = {Гуда, А. И. and Михалёв, А. И. and Новикова, Е. Ю.},
+  language     = {russian},
+  langid       = {russian},
   year = {2008},
   number = {11(31)},
   pages = {136--142}
 }
 
 @Article{atu_asau12,
-  title = {Адаптивно-поисковая идентификация хаотической динамической системы {Дуффинга}},
-  journal = asau,
+  title = {Адаптивно-поисковая идентификация хаотической динамической системы Дуффинга},
+  xdata = {asau},
   author = atum,
+  language     = {russian},
+  langid       = {russian},
   year = {2008},
   number = {12(32)},
   pages = {166--171}
@@ -41,6 +58,8 @@
   title = {Исследование правил клеточных автоматов для моделирования процессов затвердевания квазиравновесных бинарных сплавов},
   journal = {Автоматика. Автоматизація. Электротехнические Комплексы и Системы – ААЭКС.},
   author = {Михайловская, Т. В. and Михалёв, А. И. and Гуда, А. И.},
+  language     = {russian},
+  langid       = {russian},
   year = {2008},
   number = {2(22)},
   pages = {19--27}
@@ -49,7 +68,9 @@
 @Article{atu_asau13,
   title = {Использование методов нечеткого вывода для оценки тяжести  общего состояния больных разлитым перитонитом},
   author = {Новикова, Е. Ю. and Кутовой, А. Б. and Михалёв, А. И. and Гуда, А. И. },
-  journal = asau,
+  language     = {russian},
+  langid       = {russian},
+  xdata = {asau},
   year = {2008},
   number = {13(33)},
   pages = {159--165}
@@ -57,8 +78,10 @@
 
 @Article{atu_asau14,
   title = {Адаптивно-поисковая идентификация хаотической динамической системы Ресслера},
-  journal = asau,
+  xdata = {asau},
   author = atum,
+  language     = {russian},
+  langid       = {russian},
   year = {2009},
   number = {14(34)},
   pages = {125--129}
@@ -69,6 +92,8 @@
   title = {Критерии идентификации параметров хаотической динамики управляемого объекта},
   author = {Гуда, А. И. and Михалёв, А. И. and Деревянко, А. И.},
   journal = {Автомобільний транспорт.  – Вісник Харківського національного автодорожнього університету.},
+  language     = {russian},
+  langid       = {russian},
   year = {2009},
   number = {25},
   pages = {254--257}
@@ -76,8 +101,10 @@
 
 @Article{atu_asau15,
   title = {Влияние возмущений входного сигнала на динамику и идентификацию нелинейной  системы {Дуффинга}},
-  journal = asau,
+  xdata = {asau},
   author = atum,
+  language     = {russian},
+  langid       = {russian},
   year = {2010},
   number = {15(35)},
   pages = {121--125}
@@ -85,8 +112,10 @@
 
 @Article{atu_asau16,
   title = {Выбор критерия при адаптивно-поисковой идентификации динамической системы Ван-Дер-Поля},
-  journal = asau,
+  xdata = {asau},
   author = atum,
+  language     = {russian},
+  langid       = {russian},
   year = {2010},
   number = {16(36)},
   pages = {154--160}
@@ -95,8 +124,10 @@
 
 @Article{atu_asau17,
   title = {Исследование альтернативного критерия при адаптивно- поисковой идентификации динамической системы Ван-Дер-Поля},
-  journal = asau,
+  xdata = {asau},
   author = atum,
+  language     = {russian},
+  langid       = {russian},
   year = {2010},
   number = {17(37)},
   pages = {149--154}
@@ -106,6 +137,8 @@
 @Article{atu_ich2011,
   title = {Выбор критериев для оценки эффективности процессов идентификации систем с хаотической динамикой },
   author = atum,
+  language     = {russian},
+  langid       = {russian},
   journal = { Матеріали П Всеукраїнської науково-практичної конференції «Інформатика та системні науки» (ІСН-2011). – Полтава, 17-19.03.2011. – Полтава: РВВ ПУЕТ},
   year = {2011},
   pages = {355}
@@ -113,8 +146,10 @@
 
 @Article{atu_st75,
   title = {Сравнительный анализ двух критериев адаптивно-поисковой идентификации нелинейной динамической системи Ван-Дер-Поля},
-  journal = st,
+  xdata = {st},
   author = atum,
+  language     = {russian},
+  langid       = {russian},
   year = {2011},
   number = {4(75)},
   pages = {15--20}
@@ -123,8 +158,11 @@
 @Article{atu_ISDMCI2011,
   title = {Идентификация систем с хаотической динамикой},
   author = atum,
-  journal = ISDMCI,
+  xdata = {ISDMCI},
+  language     = {russian},
+  langid       = {russian},
   year = {2011},
+  eventdate = {2011-05},
   number = {2},
   pages = {211--212}
 }
@@ -133,24 +171,30 @@
   title = {Адаптивно-поисковая идентификация нелинейной динамической системы Ван-дер-Поля},
   author = atum,
   journal = {Информационные технологии в управлении сложными системами. Сборник докладов научной конференции (Днепропетровск, 24 июня 2011). -Днепропетровск: изд-во «Свидлер А.Л.»},
+  language     = {russian},
+  langid       = {russian},
   year = {2011},
   pages = {39--40}
 }
 
 @Article{atu_asau18,
   title = {Синтез критериев при адаптивно-поисковой идентификации динамической системы Чуа},
-  journal = asau,
+  xdata = {asau},
   author = atum,
+  language     = {russian},
+  langid       = {russian},
   year = {2011},
   number = {18(38)},
   pages = {140--146}
 }
 
-// 5-9 сент.
 @Article{atu_apir2011,
   title = {Адаптивно-поисковая идентификация нелинейной хаотической системы Чуа},
   journal = apir,
   author = atum,
+  language     = {russian},
+  langid       = {russian},
+  eventdate = {2011-09},
   year = {2011},
   pages = {18--19}
 }
@@ -158,7 +202,9 @@
 @Article{atu_st67,
   title = {Особенности моделирования и идентификации хаотической системы Ресслера с возмущениями},
   author = {Гуда, А. И. and Михалёв, А. И. and Дмитриева, И. С.},
-  journal = st,
+  xdata = {st},
+  language     = {russian},
+  langid       = {russian},
   year = {2010},
   number = {2(67)},
   pages = {114--118}
@@ -166,8 +212,10 @@
 
 @Article{atu_asau19,
   title = {Моделювання та дослiдження хаотичної динамiки зв’язаних релаксацiйних генераторiв},
-  journal = asau,
+  xdata = {asau},
   author = atum,
+  language     = {russian},
+  langid       = {russian},
   year = {2011},
   number = {19(39)},
   pages = {164--170}
@@ -175,8 +223,10 @@
 
 @Article{atu_st79,
   title = {Физические основы при синтезе критерия адаптивно-поисковой идентификации динамической системы Лоренса},
-  journal = st,
+  xdata = {st},
   author = atum,
+  language     = {russian},
+  langid       = {russian},
   year = {2012},
   number = {2(79)},
   pages = {13--19}
@@ -184,25 +234,30 @@
 
 @Article{atu_ISDMCI2012,
   title = {Альтернативный критерий идентификации хаотической системы Рёсслера},
-  journal = ISDMCI,
+  xdata = {ISDMCI},
   author = atum,
+  language     = {russian},
+  langid       = {russian},
   year = {2012},
   pages = {247--249}
 }
 
-// 3-7 сент. 
 @Article{atu_apir2012,
   title = {Синтез критерия идентификации нелинейной хаотической системы Лоренса},
   journal = apir,
   author = atum,
+  language     = {russian},
+  langid       = {russian},
   year = {2012},
+  eventdate = {2012-09},
   pages = {11--13}
 }
 
 @Article{atu_st85,
   title = {Chaotic system with relay hysteresis in return force: simulation and analysis},
-  journal = st,
-  author = atum,
+  xdata = {st},
+  author = atume,
+  language     = {english},
   year = {2013},
   number = {2(85)},
   pages = {30--35}
@@ -211,15 +266,19 @@
 @Article{atu_ISDMCI2013,
   title = {Хаотические колебательные системы с зоной нечувствительности и релейным гистерезисом в восстанавливающей силе},
   author = atum,
-  journal = ISDMCI,
+  xdata = {ISDMCI},
+  language     = {russian},
+  langid       = {russian},
   year = {2013},
   pages = {434--435}
 }
 
 @Article{atu_asau20,
   title = {Моделирование хаотической динамики системы с зоной нечувствительности и идентификация её параметров},
-  journal = asau,
+  xdata = {asau},
   author = atum,
+  language     = {russian},
+  langid       = {russian},
   year = {2012},
   number = {20(40)},
   pages = {180--186}
@@ -227,27 +286,33 @@
 
 @Article{atu_asau21,
   title = {Генератор Колпитца: моделирование хаотической динамики и параметрическая идентификация},
-  journal = asau,
+  xdata = {asau},
   author = atum,
+  language     = {russian},
+  langid       = {russian},
   year = {2012},
   number = {21(41)},
   pages = {146--153}
 }
 
-// 9-13 sep
 @Article{atu_apir2013,
   title = {Идентификация бифуркационного параметра генератора Колптица},
   author = atum,
   journal = apir,
+  language     = {russian},
+  langid       = {russian},
   year = {2013},
+  eventdate = {2013-09},
   pages = {104-105}
 }
 
 @Article{atu_st91,
   title = {Influence of input and measurement noise to Lorenz system adaptive-searching identification},
   author = atume,
-  journal = st,
+  xdata = {st},
   year = {2014},
+  language     = {russian},
+  langid       = {russian},
   number = {2(91)},
   pages = {154--158}
 }
@@ -255,15 +320,19 @@
 @Article{atu_ISDMCI2014,
   title = {Совместное влияние изменений параметров системы адаптивно-поисковой идентификации хаотических систем объектов  на процесс поиска},
   author = atum,
-  journal = ISDMCI,
+  xdata = {ISDMCI},
+  language     = {russian},
+  langid       = {russian},
   year = {2014},
   pages = {63--64}
 }
 
 @Article{atu_asau22,
   title = {Настройка адаптивно-поисковой системы идентификации применительно к хаотическим объектам},
-  journal = asau,
+  xdata = {asau},
   author = atum,
+  language     = {russian},
+  langid       = {russian},
   year = {2013},
   number = {1(22)},
   pages = {134--139}
@@ -272,8 +341,10 @@
 
 @Article{atu_asau23,
   title = {Расширение рабочего диапазона поисковой идентификации нелинейных динамических систем},
-  journal = asau,
+  xdata = {asau},
   author = atum,
+  language     = {russian},
+  langid       = {russian},
   year = {2013},
   number = {2(23)},
   pages = {133--127}
@@ -282,8 +353,10 @@
 
 @Article{atu_asau24,
   title = {Повышение качества фильтрации при поисковой идентификации нелинейных динамических систем},
-  journal = asau,
+  xdata = {asau},
   author = atum,
+  language     = {russian},
+  langid       = {russian},
   year = {2014},
   number = {1(24)},
   pages = {160--165}
@@ -293,6 +366,8 @@
   title = {Physical background in identification criterion synthesis},
   author = {Guda, A. I and Mikhalyov, A. I. and Derevjanko, A. I.  and Kisała },
   journal = {Elektronika (LIV)},
+  language     = {english},
+  langid       = {english},
   number = {8},
   year = {2013},
   pages = {32--34}
@@ -301,8 +376,10 @@
 
 @Article{atu_asau25,
   title = {Использование нечётких технологий при выборе начальных условий  в задачах идентификации систем с хаотической динамикой},
-  journal = asau,
+  xdata = {asau},
   author = atum,
+  language     = {russian},
+  langid       = {russian},
   year = {2014},
   number = {2(25)},
   pages = {98--103}
@@ -310,8 +387,9 @@
 
 @Article{atu_st99,
   title = {Multi-model methods and parameters estimation approaches on non-linear dynamic system identification},
-  journal = st,
+  xdata = {st},
   author = atume,
+  language     = {english},
   year = {2015},
   number = {4(99)},
   pages = {3--9}
@@ -319,8 +397,10 @@
 
 @Article{atu_asau27,
   title = {Использование метода идентификации с множеством подвижных моделей применительно к динамической системе Лоренса},
-  journal = asau,
+  xdata = {asau},
   author = atum,
+  language     = {russian},
+  langid       = {russian},
   year = {2015},
   number = {1(27)},
   pages = {191--197}
@@ -328,8 +408,10 @@
 
 @Article{atu_ISDMCI2015,
   title = {Применение многомодельного метода в задаче параметрической  идентификации хаотической системы Лоренса},
-  journal = ISDMCI,
+  xdata = {ISDMCI},
   author = atum,
+  language     = {russian},
+  langid       = {russian},
   year = {2015},
   pages = {53--54}
 }
@@ -338,6 +420,8 @@
   title = {Method of Lorenz systems parametric identification by the searching models ensemble},
   author = atume,
   journal = {Scientific and Technical Conference ``Computer Sciences and Information Technologies'' (CSIT) },
+  language     = {english},
+  langid       = {english},
   year = {2015},
   pages = {73--75}
 }
@@ -345,6 +429,8 @@
 @Article{atu_arsirii,
   title = {Система поддержки принятия решений по повышению эффективности гидроаеродинамических процессов во вспомогательных элементах    энергетических агрегатов},
   author = {Арсирий, Е. А. and  Антощук, С. Г. and Арсирий, В. А. and Гуда, А. И. },
+  language     = {russian},
+  langid       = {russian},
   year = {2015}
 }
 
@@ -353,6 +439,8 @@
   title = {Настройка параметров системы мультимодельной адаптивно-поисковой системы идентификации},
   author = atum,
   journal = {Вестник ХНТУ. – Херсон: Херсонский национальный технический университет. (РИНЦ).},
+  language     = {russian},
+  langid       = {russian},
   year = {2015},
   number = {3(54)},
   pages = {138--243}
@@ -360,8 +448,9 @@
 
 @Article{atu_st103,
   title = {Multi-model methods and parameters estimation approaches on non-linear dynamic system identification},
-  journal = st,
+  xdata = {st},
   author = atume,
+  language     = {english},
   year = {2016},
   number = {2(103)},
   pages = {57--62}
@@ -369,8 +458,10 @@
 
 @Article{atu_st105,
   title = {Визначення гранулометричного складу матеріалу у повітряному потоці з використанням діаграм Пуанкаре},
-  journal = st,
+  xdata = {st},
   author = {Сухомлин, Р. О. and Михальов, А. И. and  Прядко, Н. С. and Тернова, К. В and Гуда, А. И.},
+  language     = {russian},
+  langid       = {russian},
   year = {2016},
   number = {4(105)},
   pages = {18--24}
@@ -380,6 +471,8 @@
   title = {Multi-model identification system properties near extremum: simulations and analysis},
   journal = {Journal of Applied Computer Science – JACS-2015 (Scopus)},
   author = atume,
+  language     = {english},
+  langid       = {english},
   year = {2015},
   number = {23(2)},
   pages = {21-28}
@@ -387,8 +480,10 @@
 
 @Article{atu_st104a,
   title = {Особливості використання HX711 для отримання даних з тензодатчика},
-  journal = st,
+  xdata = {st},
   author = {Зимогляд, А. Ю. and Гуда, А. И.},
+  language     = {russian},
+  langid       = {russian},
   year = {2016},
   number = {3(104)},
   pages = {136--140}
@@ -396,8 +491,10 @@
 
 @Article{atu_st104b,
   title = {Виявлення залежності кута повороту сервоприводу від вхідного імпульсу},
-  journal = st,
+  xdata = {st},
   author = {Левченко, Д.О. and Гуда, А. И.},
+  language     = {russian},
+  langid       = {russian},
   year = {2016},
   number = {3(104)},
   pages = {141--146}
@@ -405,9 +502,11 @@
 
 @Article{atu_kher2016,
   title = {Применение различных функций качества идентификации при использовании ансамбля поисковых агентов в задаче идентификации нелинейных динамических систем},
-  journal = ISDMCI,
+  xdata = {ISDMCI},
   author = atum,
-  year = {2015},
+  language     = {russian},
+  langid       = {russian},
+  year = {2016},
   pages = {53--54}
 }
 
