--- a/chua_testsys.tex
+++ b/chua_testsys.tex
@@ -8,7 +8,7 @@
 
 Одной из известных хаотических систем, легко реализуемых как модельно,
 так и схемотехнически (рис.~\ref{atu:f:chuascheme}),
-является нелинейная система Чуа~[??]:
+является нелинейная система Чуа~\cite{moon_chaotic_vibr,buga_chua}:
 
 \begin{figure}[htb!]
 \begin{center}
@@ -75,11 +75,11 @@ g(V) =
 В зависимости от величины этого параметра,
 система может переходить в режимы затухания,
 периодического и сложно-периодического движения, а также в режим
-хаотических колебаний. При этом сложно-периодическое и хаотическое
+хаотических колебаний~\cite{anisch_nonlin_eff,magni_new_meth}. При этом сложно-периодическое и хаотическое
 движения чередуются с изменением величины \(m_2\).
 
 
-Классически параметры задаются следующим образом~[chua]:
+Классически параметры задаются следующим образом~\cite{buga_chua}:
 $C_1 = 1/9$, $C_2 = 1$, $L= 1/7$, $R = 1/0.7$, $m_0=-0.5$, $ m_2 \in [ -0.15; -0.7 ] $.
 
 Введём обозначения:
