--- a/colp_testsys.tex
+++ b/colp_testsys.tex
@@ -8,7 +8,8 @@
 В  практике   создания   радиоэлектронных   устройств   часто   используются
 генераторы сигналов, способные генерировать разнообразные виды  сигналов, в том числе
 сложно-периодические и хаотические.
-В частности, генератор  Колпитца~[??,\cite{atu_asau21}], в  зависимости   от   условий,   может
+В частности, генератор  Колпитца~\cite{kennedy_chaos_colpitts,atu_asau21}, в
+зависимости от условий,   может
 генерировать  колебания,  как  близкие  к  гармоническим,  так  и  проявлять
 хаотическую  динамику  в  широком  спектральном   диапазоне.   Идентификация
 параметров рассматриваемого генератора  необходима,  с  одной  стороны,  для
@@ -133,7 +134,7 @@ $ T_s = \sqrt{L C} $.
 \]
 
 Поведение величины $I_{ce}$ достаточно хорошо описывает модель
-Эберса-Молла~[Хоровиц]:
+Эберса-Молла~\cite{horowitz}:
 
 \begin{equation}
   I_c = I_s \left( \exp\frac{V_{be}}U_t{} - 1 \right),
@@ -310,7 +311,7 @@ $q_{*}(\mu) $, полученные путём моделирования
 При этом первый из них показывает более равномерную зависимость.
 С другой стороны, при большинство из рассморенных зависимостей имею явно
 выраженный гиперболический характер, особенно при малых значениях $b$.
-Следовательно, в сприсок кандидатов следует добавить $q_{x^{-2}} $ и $q_{z^{-2}}$.
+Следовательно, в список кандидатов следует добавить $q_{x^{-2}} $ и $q_{z^{-2}}$.
 
 \begin{figure}[htb!]
 \centerline{
