--- a/fric_testsys.tex
+++ b/fric_testsys.tex
@@ -11,7 +11,10 @@
 А именно, непосредственное сравнение выходов системы и модели не позволяет
 сделать никаких выводов о соотношениях между параметрами модели о объекта.
 Одним из примеров является динамическая система, моделирующая поведение
-тела заданной массы по действием внешней вынуждающей силы и силы сухого трения (\ref{atu:eq:dryfric_sys}):
+тела заданной массы по действием внешней вынуждающей силы
+и силы сухого трения
+\cite{berger_friction,atu_asau11}
+(\ref{atu:eq:dryfric_sys}):
 
 \begin{equation}
  m \ddot{x} + f( x, \dot{x}, \ldots)  = u(t).
