--- a/spr_a_testsys.tex
+++ b/spr_a_testsys.tex
@@ -8,7 +8,7 @@
 
 В своих работах J.C.~Sprott рассмотрел целое семейство динамических
 систем, реализующих хаотическое поведение, обозначив их латинскими буквами
-от ``A'' до ``S''~[??]. Особое место среди них
+от ``A'' до ``S''~\cite{sprott_212}. Особое место среди них
 занимает система, обозначаемая как ``Sprott A''. Отличительной особенностью
 этой системы является отсутствие положений равновесия, что делает
 невозможным применение многих известных методов анализа, основанных на
