Switch to collective monography mode

--- a/fric_testsys.tex
+++ b/fric_testsys.tex
@@ -106,7 +106,7 @@ $ f( x, \dot{x}, \ldots)  $ -- сила сухого трения.
 создать работоспособную систему идентификации на основе критериев
 подобного вида практически невозможно.
 
-В работе [asau11??] был предложен метод синтеза критерия идентификации
+В работе \cite{atu_asau11} был предложен метод синтеза критерия идентификации
 на основе гистерезисной фильтрации выходных сигналов, с последующим
 вычислением производной. Метод показал свою работоспособность, однако,
 он требует достаточно точных сведений об уровне и шумов шумов -- для
