Some more words about multimodel method.

--- a/com_monog_atu.tex
+++ b/com_monog_atu.tex
@@ -48,12 +48,247 @@
 
 \subsection*{Введение}
 
-фафыва фыа фыва фафа ф афва ф
+Синтез систем иденификации для сложных нелинейных динамических систем
+всегда был сложной задачей. Невозможность построения
+аналитической зависимости значения идентифицируемого параметра
+от выхода объекта сильно ограничивает множество работоспособных
+методов идентификации. Наибольшую сложность для идентификации
+представляют системы динамического хаоса~\cite{moon_chaotic_vibr,anisch_nonlin_eff,sprott_212}.
+Даже лучшие в своем классе -- методы адаптивно-поисковой идентификации -- % TODO: ref
+в чистом виде оказываются в данном случае неработоспособными.
+Успешность построения системы идентификации для хаотических
+систем определяется наличием интегрального критерия,
+описывающего динамику системы и зависящего от идентифицируемых параметров.
+
+
+\subsection*{Критерии идентификации}
 
 \subsection*{Мультимодельные методы идентификации}
 
-\subsubsection*{Критерии идентификации}
+Процесс поисковой идентификации заключается в настройке параметров одной
+или нескольких моделей, анализу критериев идентификации
+(или соответствующих функций качества), и оцениванию по этой информации
+значения идентифицируемого параметра. При использовании в целях идентификации нескольких моделей,
+появляются общие действия, применяемые к каждой из них. Следовательно, имеет смысл ввести следующее определение:
 
+
+\textbf{ Агент } -- совокупность модели, критерия идентификации,
+алгоритмов локального поиска и, может быть адаптации.
+
+Как правило, один агент управляет одной моделью. При этом
+он может использовать информацию, как полученную как от других
+агентов, так и полученную в результате обработки данных от других агентов.
+
+В простейших случаях возможно построение системы идентификации
+и одной моделью, и соответственно одним агентом. % TODO: cite
+Примерами такого похода могут служить метод
+синхронного детектора и оригинальный адаптивно-поисковый метод.
+Применение одномодельных методов требует определённого механизма
+сохранения истории процесса поиска, по крайней мере в пределах
+одного поискового ``периода''. Это сильно ограничивает диапазон
+применимости данных методов, в первую очередь -- из-за значительных
+временных затрат на повторяющийся поиск.
+
+Применение пары моделей (в этом случае имеет смысл говорить об одном агенте)
+позволяет с меньшими временными затратами оценить градиент функции качества,
+и, как следствие -- определить значение параметра. Также значительным плюсом
+такого подхода является меньшая скорость изменения параметров моделей.
+
+Тем не менее, при использовании пары моделей неоправданно много времени
+тратится на перемещение поисковой пары, особенно при резких изменениях
+идентифицируемого параметра. Поэтому, применения множества
+поисковых агентов может кардинально уменьшить время идентификации.
+
+Рассмотрим одномерный случай.
+Пусть задан объект $ \mathbf{O} $, и $N$ моделей:
+$ \mathbf{M}_0 \ldots \mathbf{M}_{N-1} $.
+На вход как объекта, так и каждой из моделей подаётся (при необходимости)
+входной сигнал $u(t)$. Выход моделей $x_{mi}(t)$ измеряется точно,
+а объекта $x_o(t)$ -- с определённой помехой $w(t)$. При необходимости помеху
+со сходными характеристиками можно подмешивать и выходу моделей.
+Обозначим $q_o(t)$ -- текущее значение критерия для
+объекта, $q_{mi}(t)$ -- для $i$-той модели.
+
+Каждый агент, определяя величину $q_{mi}(t)$ , и получая $q_o(t)$,
+вычисляет безразмерную функцию качества идентификации.
+Наиболее распространённые виды таких функций:
+
+\begin{equation}
+  F_i
+  =
+  F(q_o,q_{m_i})
+  =
+  \exp \left( - \left({\frac{q_o-q_{m_i}}{q_\gamma}} \right)^2 \right).
+\label{atu:eq:F_gauss}
+\end{equation}
+
+\begin{equation}
+  F_i
+  =
+  F(q_o,q_{m_i})
+  =
+  \exp \left( - \frac{|q_o-q_{m_i}|}{q_\gamma}  \right).
+\label{atu:eq:F_modgauss}
+\end{equation}
+
+Для всех рассмотренных функций $q_\gamma$ -- величина, обратная чувствительности
+функции качества -- задаёт масштаб и рабочий диапазон функции качества.
+
+Обозначим текущую модель индексом ``c'',
+предыдущую -- ``l'', и последующую -- ``r''. 
+
+Для псевдомоделей считаем
+
+\[
+  F_{ll} = F_{rr} = 0.
+\]
+
+
+Расмотрим 3 подхода к определению
+точки максимума функции качества, а следовательно -- значения идентифицируемого параметра.
+Первый -- реализация
+метода COG (Center of gravity), используемого при дефаззификации систем нечёткой логики:
+
+\begin{equation}
+  p_{ge}
+  =
+  \frac{\sum\limits_{i=0}^{n-1} F_{mi} p_{mi}}
+       {\sum\limits_{i=0}^{n-1} F_{mi} }
+  .
+  \label{atu:eq:p_ge}
+\end{equation}
+
+Второй подход призван уменьшить зависимость первого
+от влияния локальных экстремумов и границ. В этом
+случае определяется модель $M_{i_{m}}$ с максимальным значением
+$F$, и в оценке используется только ближайшая окрестность этой модели:
+
+\begin{equation}
+  p_{le}
+  =
+  \frac{ F_{i_m-1} p_{i_m-1} + F_{i_m} p_{i_m} + F_{i_m+1} p_{i_m+1} }
+       { F_{i_m-1} + F_{i_m} + F_{i_m+1} }
+  .
+  \label{atu:eq:p_le}
+\end{equation}
+
+Третий подход отличается от второго тем, что по трём точкам вблизи  $M_{i_{m}}$
+функция $F(p)$ аппроксимируется параболой, и её абсцисса вершины задаёт искомое
+значение параметра. Сместим начало координат в точку
+$ ( p_c, F_c ) $. Тогда
+
+\[
+  \tilde{p}_c = 0, \,
+  \tilde{p}_l = p_l - p_c, \,
+  \tilde{p}_r = p_r - p_c.
+\]
+
+\[
+  \tilde{F}_c = 0, \,
+  \tilde{F}_l = F_l - F_c, \,
+  \tilde{F}_r = F_r - F_c.
+\]
+
+\[
+  \left\{
+    \begin{array}{l}
+      a_2 \tilde{p}_l^2 + a_1 \tilde{p}_l  = \tilde{F}_l
+      \\
+      a_2 \tilde{p}_r^2 + a_1 \tilde{p}_r  = \tilde{F}_r
+    \end{array}
+  \right. .
+\]
+
+\[
+  a_1 = \frac{\tilde{F}_r \tilde{p}_l^2 - \tilde{F}_l \tilde{p}_r^2 }
+             { \tilde{p}_l^2 \tilde{p}_r  + \tilde{p}_l \tilde{p}_r^2 }.
+\]
+
+\[
+  a_2 = \frac{\tilde{F}_r \tilde{p}_l - \tilde{F}_l \tilde{p}_r }
+             { \tilde{p}_l^2 \tilde{p}_r  + \tilde{p}_l \tilde{p}_r^2 }.
+\]
+
+\begin{equation}
+  \tilde{p}_e = - \frac{a_1}{2 a_2};
+  \;
+  p_e = p_c -- \frac{a_1}{2 a_2}.
+  \label{atu:eq:p_e}
+\end{equation}
+
+
+При этом, если
+$ p_e \notin [ p_l, p_r ] $, или $ a_2 \ge 0 $, то значение $p_e$ искусственно
+ограничивается этим диапазоном. Значение $p_e$ для модели с индексом
+$i_m$ обозначим как $p_{ee}$ и будем считать
+текущим значением идентифицируемого параметра, полученным с помощью
+третьего подхода. Ошибки идентификации в пространстве параметров
+для рассмотренных трёх подходов обозначим соответственно:
+
+\begin{equation}
+  e_{ge} = p_{ge} - p_o, \;
+  e_{le} = p_{le} - p_o, \;
+  e_{ee} = p_{ee} - p_o.
+  \label{atu:eq:e_xx}
+\end{equation}
+
+
+Динамика изменения параметров моделей (поисковых агентов) задаётся следующим образом:
+
+\begin{equation}
+  \frac{dp_c}{dt} = v_f f_t(t),
+  \label{atu:eq:dp_dt}
+\end{equation}
+
+\noindent
+где $f_t$ -- сумма всех действующих ``сил'', $v_f$ -- коэффициент
+пропорциональности. Рассматриваем 3 действующие силы
+($ f_t = f_c + f_n + f_e $):
+
+\begin{enumerate}
+  \item
+    $f_c = -k_c (p_c - p_{c,0}) $ -- ``сила притяжения'' к начальному значению
+    параметра
+    для данной модели. Наличие этой силы не даёт всем моделям принять одно
+    и то же значение параметра вблизи экстремума, и, следовательно,
+    прекратить процесс поиска. Это также позволяет быстро переключиться
+    на другую модель в случае быстрого изменения параметра объекта.
+
+  \item
+    $f_n = k_n ( p_r - 2 p_c + p_l ) $ -- ``сила взаимодействия''
+    с соседями. Обеспечивает более равномерное распределение
+    параметров моделей вблизи экстремума.
+
+  \item
+    $f_e = - k_e ( p_c - p_e ) $ -- ``сила притяжения'' к локальной
+    оценке экстремума, определённого по выражению~(\ref{atu:eq:p_e}).
+
+\end{enumerate}
+
+Результаты моделирования показали, что в некоторых случаях
+имеет смысл введение дополнительных сил ``барьерного'' вида,
+для исключения пересечения траекторий поисковых агентов, или же ухода из рабочего диапазона.
+
+
+
+Для определения как точности, так и скорости работы системы
+идентификации, при моделировании процесса идентификации
+значения идентифицируемого параметра будут задаваться такими способами:
+
+\begin{equation}
+  p_o(t) = p_0 +  U_{p} \sin( \omega_{p} t ),
+  \label{atu:eq:p_sin}
+\end{equation}
+
+\begin{equation}
+  p_o(t) = p_0 + U_{p} \sign \sin( \omega_{p} t ).
+  \label{atu:eq:p_sign}
+\end{equation}
+
+При этом будут измеряться среднеквадратические ошибки идентификации,
+что позволит исследовать применимость систем идентификации
+при различной динамике изменения параметра, а также
+настроить параметры самой системы идентификации.
 
 
 \subsection*{Хаотические тестовые системы }
